Jan 16, 2023
  updated ojdbc dependency
  improved logging

Jan 10, 2023
  updated build.gradle to be gradle 6.x+ compatible

Dec 20, 2021
  upgraded log4j to avoid zero day exploit

May 10, 2020
  updated jar dependencies

2.0.1 - 2019-01-28
  updated build.gradle

2.0.0 - 2018-10-10
  updated to use spring framework to load properties