@@ -22,13 +22,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'commons-dbcp:commons-dbcp:1.4'
-    implementation 'commons-net:commons-net:3.7.1'
-    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
-    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
-    implementation 'com.oracle.database.jdbc:ojdbc8:19.9.0.0'
-    implementation 'org.springframework:spring-beans:5.1.8.RELEASE'
-    implementation 'org.springframework:spring-jdbc:5.1.8.RELEASE'
+    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
+    implementation 'commons-net:commons-net:3.7.2'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.1.0.0'
+    implementation 'org.springframework:spring-beans:5.1.9.RELEASE'
+    implementation 'org.springframework:spring-jdbc:5.1.9.RELEASE'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
