@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.StrainSynonymFix">
-        <property name="version" value="Strain Synonym Fix pipeline  -- build Jan 16, 2023" />
+        <property name="version" value="Strain Synonym Fix pipeline  -- build Jan 24, 2023" />
     </bean>
 
 </beans>
