@@ -1,3 +1,6 @@
+Jan 24, 2023
+  upgraded commons-dbcp from 1.x to 2.x
+
 Jan 16, 2023
   updated ojdbc dependency
   improved logging
